// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseErrorSchema should parse the validation errors and append all errors 1`] = `
Object {
  "age": Object {
    "message": "age is a required field",
    "messages": Object {
      "required": "age is a required field",
    },
    "ref": Object {},
    "type": "required",
    "types": Object {
      "required": true,
    },
  },
  "name": Object {
    "message": "name is a required field",
    "messages": Object {
      "min": "name is a min field",
      "required": "name is a required field",
    },
    "ref": Object {},
    "type": "required",
    "types": Object {
      "min": true,
      "required": true,
    },
  },
}
`;

exports[`parseErrorSchema should parse the validation errors into react hook form errors format 1`] = `
Object {
  "age": Object {
    "message": "age is a required field",
    "ref": Object {},
    "type": "required",
  },
  "name": Object {
    "message": "name is a min field",
    "ref": Object {},
    "type": "min",
  },
}
`;

exports[`validateWithSchema should return undefined when no error reported 1`] = `
Object {
  "fieldErrors": Object {
    "age": Object {
      "message": "age is a required field",
      "ref": Object {},
      "type": "required",
    },
    "name": Object {
      "message": "name is a min field",
      "ref": Object {},
      "type": "min",
    },
  },
  "result": Object {},
}
`;
